2025-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-uudecode, tramp-readlink-file-truename)
	(tramp-perl-file-truename, tramp-perl-file-name-all-completions)
	(tramp-shell-file-name-all-completions)
	(tramp-perl-file-attributes)
	(tramp-perl-directory-files-and-attributes, tramp-perl-id)
	(tramp-python-id, tramp-perl-encode, tramp-perl-decode)
	(tramp-awk-encode, tramp-awk-decode)
	(tramp-bundle-read-file-names): Indent script for better readability.
	(tramp-perl-file-name-all-completions)
	(tramp-shell-file-name-all-completions)
	(tramp-ls-file-attributes, tramp-bundle-read-file-names):
	Adapt docstring.
	(tramp-shell-print-quoted-string): New defconst.
	(tramp-shell-file-name-all-completions): Use "%b" format specifier.
	(tramp-bundle-read-file-names):  Use "%k" format specifier.
	(tramp-sh-handle-file-name-all-completions): Don't send
	`tramp-bundle-read-file-names'.
	(tramp-expand-script): Adapt docstring.  Apply always
	`format-spec'.  Handle also "%b" and "%k" format specifiers.

2025-11-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-expand-script): Handle "%%" format specifier better.

2025-10-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.4 released

2025-10-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-add-external-operation): Check
	`default-directory' if `(car args)' is a relative file name, or nil.

2025-10-25  Stephen Berman  <stephen.berman@gmx.net>

	Fix Tramp support of GVFS built without FUSE

	* tramp-gvfs.el (tramp-gvfs-enabled): Add check for running
	process "gvfsd", since GVFS may be built without FUSE.

2025-10-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region):
	* tramp-cache.el (tramp-flush-file-upper-properties):
	* tramp-sh.el (tramp-sh-handle-insert-directory): Use `when-let*'
	consequently.

	* tramp-cmds.el (tramp-file-name-with-method): Add :initialize and
	:set functions.