@@ -1,3 +1,10 @@
+2025-11-11  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-container.el (tramp-methods) <distrobox>:
+	* tramp-sh.el (tramp-methods) <sg>: Add `tramp-direct-async'.
+	(tramp-expand-script): Fix typo in script name.
+	(tramp-maybe-send-script): Adapt docstring.
+
 2025-11-09  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-uudecode, tramp-readlink-file-truename)
